# fastapi__postgresql_traefik_docker

./: docker-compose.yml  fastapi.dockerfile  pyproject.toml
app/: fill_base.py  main.py  Данные_для_базы.xlsx
app/db_service/: db.py  models.py
