[tool.poetry]
name = "fastapi-postgresql-traefik-docker"
version = "0.1.0"
description = ""
authors = ["arletino <titkov@nxt.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
